added text-overflow: hidden with ellipsis big news text mobile

--- a/code/index.html
+++ b/code/index.html
@@ -32,6 +32,7 @@
         <p class="big-news-text">
           I was wondering if my cat could be placed over the logo in the flyer. Can we have another option can you rework to make the pizza look more delicious we are a big name to have in your portfolio could you solutionize that for me, yet make it sexy. Can it handle a million in one go pass the mayo, appeal to the client, sue the vice president yet something summery; colourful I got your invoice...it seems really high, why did you charge so much, and the target audience is makes and famles aged zero and up, for i love it, but can you invert all colors?
         </p>
+        <a href="#" class="read-more">Read more here!</a>
       </div>  
     </section>
 
