--- a/code/index.html
+++ b/code/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
 
+    <!-- Header section -->
     <header class="header">
-      <!-- Some kind of logo and navbar -->
       <div class="logo-container">
         <img class="logo-sloth" src="./logo-sloth.png" alt="logo-sloth">
         <h1 class="sloth-news-title">Sloth News</h1>
@@ -23,18 +22,18 @@
       </nav>
     </header>
 
+    <!-- Big news section -->
     <section class="big-news">
-      <!-- The big news content -->
       <img class="big-news-img" src="./big-news-img.jpg" alt="big-news-sloth">
       <article class="big-news-article">
         <h2 class="big-news-title">Latest news:</h2>
-        <p class="big-news-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit...</p> 
-        <a class="big-news-link" href="#">Read more...</a>
+        <p class="big-news-text">10 Incredible Facts About The Sloth</p> 
+        <a class="big-news-link" href="https://slothconservation.org/10-incredible-facts-about-the-sloth/">Read More...</a>
       </article>
     </section>
 
+    <!-- Other news section -->
     <section class="other-news">
-      <!-- The other news  -->
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img1.jpg" alt="sloth-img1">
         <p class="news-text">Lorem ipsum dolor sit amet.</p>
