Changed text and added footer

--- a/code/index.html
+++ b/code/index.html
@@ -24,10 +24,11 @@
     <div class="big-news-text">
       <h2>“It´s hard to make speeches with hair in your face”.</h2>
       <p>
-        Lorem Ipsum is the single greatest threat
-        Lorem Ipsum is the single greatest threat
-        Lorem Ipsum is the single greatest threat
-        Lorem Ipsum is the single greatest threat
+        Give me a head with hair, long beautiful hair.
+        Shining, gleaming, streaming, flaxen, waxen.
+        Give me down to there hair, shoulder lenght or longer
+        Here baby, there, momma, ev'rywhere, daddy, daddy.
+    
       </p>
     </div>
   </section>
@@ -36,12 +37,9 @@
     <div class="grid-item">
       <img class="grid-image" src="./assets/HairBlow1.jpg" alt="1" />
       <div class="grid-text">
-        <h2>Windy day in august</h2>
+        <h2>Nice With Some Privacy</h2>
         <p>
-          Lorem Ipsum is the single greatest threat
-          Lorem Ipsum is the single greatest threat
-          Lorem Ipsum is the single greatest threat
-          Lorem Ipsum is the single greatest threat
+          Sometimes I hide myself away just to see if I am worth looking for. 
         </p>
       </div>
 
@@ -52,7 +50,7 @@
       <div class="grid-text">
         <h2>Windy day in august</h2>
         <p>
-          Lorem Ipsum is the single greatest threat
+          My schampoo tastes bad, bur at least it smells good. 
         </p>
       </div>
     </div>
@@ -60,9 +58,9 @@
     <div class="grid-item">
       <img class="grid-image" src="./assets/HairBlow2.jpg" alt="2" />
       <div class="grid-text">
-        <h2>Windy day in august</h2>
+        <h2>Can´t See Much</h2>
         <p>
-          Lorem Ipsum is the single greatest threat
+          We are only as blind as we want to be.
         </p>
       </div>
     </div>
@@ -72,7 +70,7 @@
       <div class="grid-text">
         <h2>Where Did the Wind Go?</h2>
         <p>
-          I love the feeling of the fresh air on my face and the wind blowing through my hair.
+          I loved the feeling of the fresh air on my face and the wind blowing through my hair.
         </p>
       </div>
     </div>
@@ -80,4 +78,7 @@
   </section>
 </body>
 
+<footer>
+  <p>Thanks for the hair in my face!</p>
+</footer>
 </html>
