header changes + some more

--- a/code/index.html
+++ b/code/index.html
@@ -98,7 +98,7 @@
           <img class="technigo-logo" src="./logo.svg">
         </a>
         <p class="footer-text">
-          By Daniel Vestin
+          By Daniel Vestin 2021
         </p>
       </div>
     </footer>
