changed some text

--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
       <article class="big-news-article">
         <h2 class="big-news-title">Latest news:</h2>
         <p class="big-news-text">10 Incredible Facts About The Sloth</p> 
-        <a class="big-news-link" href="https://slothconservation.org/10-incredible-facts-about-the-sloth/">Read More...</a>
+        <a class="big-news-link" href="https://slothconservation.org/10-incredible-facts-about-the-sloth/">Read More ></a>
       </article>
     </section>
 
@@ -36,43 +36,43 @@
     <section class="other-news">
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img1.jpg" alt="sloth-img1">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img2.jpg" alt="sloth-img2">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img3.jpg" alt="sloth-img3">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img4.jpg" alt="sloth-img4">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img5.jpg" alt="sloth-img5">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img6.jpg" alt="sloth-img6">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img7.jpg" alt="sloth-img7">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
       <article class="news-card">
         <img class="news-card-img" src="./sloth-img8.jpg" alt="sloth-img8">
-        <p class="news-text">Lorem ipsum dolor sit amet.</p>
-        <a class="other-news-link" href="#">Read more...</a>
+        <p class="news-text">Lorem ipsum dolor sit amet...</p>
+        <a class="other-news-link" href="#">Read more ></a>
       </article>
     </section>
 
