--- a/code/index.html
+++ b/code/index.html
@@ -50,7 +50,7 @@
       <div class="grid-text">
         <h2>Windy day in august</h2>
         <p>
-          My schampoo tastes bad, bur at least it smells good. 
+          My schampoo tastes bad, but at least it smells good. 
         </p>
       </div>
     </div>
