--- a/code/index.html
+++ b/code/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> -->
+<!DOCTYPE html>
 <html>
   
   <head>
@@ -12,17 +12,18 @@
   
   <body>
     <header>
+      <div class="header-child logo">
         <img class="header-child technico" src="../code/logo.svg" alt="Technico" />
         <img class="header-child zebra" src="./images.jpg" alt="zebra"/>
-        <p class="titel">Zebra News</p>         
+        <p class="header-child titel">Zebra News</p>
+      </div>
           <nav class="header-child navigation">
             <ul>
               <li><a href="https://www.blueletterbible.org/">Big  Zebra News</a></li>
               <li><a href="https://www.msn.com/nl-nl/nieuws">Small  Zebra News</a></li>
-              <li><a href="#">Domestic Zebra News</a></li>
-              <li><a href="#">Foreign Zebra News</a></li>
+              <li><a href="#">Contact Zebra News</a></li>
+              <li><button>Donate Zebra News</button></li>
             </ul>
-
           </nav>
 <!-- Some kind of logo and navbar -->
     </header>
@@ -31,7 +32,7 @@
       <img class="big-news-picture" src="http://placeimg.com/550/350/arch" alt="Architecture"/>
       <p class="big-news-tekst">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisi dui, interdum quis viverra vitae, tempus tincidunt ante. Sed finibus turpis non arcu laoreet consectetur. Donec vel porta felis. Etiam at enim ut odio pulvinar egestas ut ut sem. Sed id dui enim. Duis vulputate imperdiet metus, non pulvinar nulla blandit ac. Etiam gravida gravida ante at tincidunt. Mauris risus erat, congue in hendrerit id, laoreet quis elit. Donec risus ligula, posuere ut arcu vel, rhoncus eleifend tellus. Vivamus in arcu sollicitudin, pulvinar tellus in, lobortis est. Integer sit amet accumsan nibh. Mauris vulputate iaculis tellus. Donec facilisis elit non enim imperdiet luctus. Curabitur vehicula urna ante, at rhoncus nisi feugiat et. In tincidunt, erat sed luctus lobortis, elit orci egestas lorem, fringilla venenatis elit tortor a orci.
-      </p> --> -->
+      </p>
 <!-- The big news content -->
     </section>
 
@@ -68,4 +69,16 @@
 
 <!-- The other news -->
   </body>
+  <footer>
+    <nav class="header-child navigation">
+      <ul>
+        <li><a href="https://www.blueletterbible.org/">Big  Zebra News</a></li>
+        <li><a href="https://www.msn.com/nl-nl/nieuws">Small  Zebra News</a></li>
+        <li><a href="#">Contact Zebra News</a></li>
+        <li><button>Donate Zebra News</button></li>
+      </ul>
+
+    </nav>
+  
+</footer>
 </html>
