The final touches and social media icons added

--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -30,6 +31,7 @@
         <img class="big-news-picture" src="https://images.unsplash.com/photo-1559782004-0485f6b3529f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="Theatre performance" />
       </div>
       <div class="big-news-text">
+        <h1>JRT play avalible in VR</h1>
         <p>The performance LATVIAN LOVE is based on true events and actors’ own fantasies. Materials obtained during interviews and meetings – personal stories, letters, photographs – served as a source for the actors’ fantasy and work on the parts. The performance consists of 13 scenes, each presenting different dating situation and social group. All the characters represent some true to type personalities one can find somewhere next to us either in Riga or in country-side.</p>
       </div>
     </section>
@@ -37,36 +39,56 @@
     <section class="small-news">
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1521380233442-49ad9332fcf8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="portrait of a woman" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1617127610788-3a645fe02bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="audience with masks" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1477336229416-9d67406e73bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="blue smoke in a tunel" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1505205136697-6913dd6db1a7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1083&q=80" alt="old theater hall" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1435034568314-8303dbda4b8c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80" alt="circus" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1586351011807-b79c8ef43057?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="violin player" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1571672346827-ee4040cdd7d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" alt="closed currtains" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
       <div class="small-news-item">
         <img class="small-news-picture" src="https://images.unsplash.com/photo-1538600375473-cdc68cf8bf81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="documentary film screening" />
+        <h2>Headline</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
       </div>
     </section>
+    <footer class="bottom-footer">
+      <div class="footer-image">
+        <img class="small-logo" src="./facebook_icon.svg" alt="facebook logo" />
+      </div>
+      <div class="footer-image">
+        <img class="small-logo" src="./instagram-logo.svg" alt="instagram logo" />
+      </div>
+      <div class="footer-image">
+        <img class="small-logo" src="./twitter-logo.svg" alt="twitter logo"  />
+      </div>
+      
+    </footer>
   </body>
 </html>
