--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" 
+    rel="stylesheet">
   </head>
   <body>
     <header>
@@ -26,11 +27,22 @@
 
     <section class="big-news">
       <!-- The big news content -->
-      <img src="./9jgR917dSTygCDTokSBugQ-crop-c0-5__0-5-718x441-70.jpeg" 
+        <img src="./9jgR917dSTygCDTokSBugQ-crop-c0-5__0-5-718x441-70.jpeg" 
       alt="dekmantel-selector-croatia" class="big-news-foto">
       <article>
         <h1>Event of the week</h1>
-        <p>At the end of an unusual summer, we are more than happy to say: Yes, Dekmantel Selectors 2021 is happening. The current Croatian event regulations allow events with a capacity exceeding 1000 people, such as Dekmantel Selectors, when the organizer applies to the Croatian government for an additional permit. This permit, which is granted to our hosts at The Garden, demands that a range of safety requirements are implemented. Amongst others these are a mandatory valid ECC check (European Covid Certificate - proof of vaccination, a recent negative test or proof of recent recovery) at the entrance for all visitors and an on-site testing facility. With this, we can safely draw DJs and punters back to stay in Tisno. Great music, plentiful sunshine, and a much-needed moment to breathe.</p>
+        <p>At the end of an unusual summer, we are more than happy to say: 
+          Yes, Dekmantel Selectors 2021 is happening. The current Croatian 
+          event regulations allow events with a capacity exceeding 1000 people,
+           such as Dekmantel Selectors, when the organizer applies to the 
+          Croatian government for an additional permit. This permit, which is
+          granted to our hosts at The Garden, demands that a range of safety 
+          requirements are implemented. Amongst others these are a mandatory
+           valid ECC check (European Covid Certificate - proof of vaccination,
+          a recent negative test or proof of recent recovery) at the entrance
+         for all visitors and an on-site testing facility. With this, we can 
+         safely draw DJs and punters back to stay in Tisno. Great music, 
+         plentiful sunshine, and a much-needed moment to breathe.</p>
       </article>
     </section>
 
@@ -39,9 +51,11 @@
     </div>     
     <section class="all-events">
       <!-- The other news  -->
+      <!--Adding two classse in order to style them both as group and individually-->
       <div class="events e1">
         <img src="./se-0825-1458644-front.jpeg" alt="antony-linell" class="events-photo">
-        <p>Peder Mannerfelt, Antony Linell & Ali M. Demirel present an evening of blistering audiovisual electronics in the beautiful setting of Capitol's prime movie theatre </p>
+        <p>Peder Mannerfelt, Antony Linell & Ali M. Demirel present an evening of blistering 
+          audiovisual electronics in the beautiful setting of Capitol's prime movie theatre </p>
       </div>
       <div class="events e2">
         <img src="./de-0827-1458473-1779846-front.jpeg" alt="staub-festival" class="events-photo">
@@ -61,10 +75,11 @@
       <h3 id="Music">Music</h3>
     </div>    
     <section class="all-music">
-            <div class="music m1">
+    <!--Adding two classse in order to style them both as group and individually-->
+      <div class="music m1">
         <img src="./smile-front-cover-scaled-cover.jpeg" alt="theo-parrish-cover" class="music-photo">
         <p>Strong words and even stronger music as Theo keeps it realer than anyone in the game.</p>
-      </div>
+        </div>
       <div class="music m2">
         <img src="./a0810955077_10-cover.jpeg" alt="alien-3-mix" class="music-photo"> 
         <p>An excellent techno remix that finds Daniel Avery in rare form.</p>
@@ -86,14 +101,7 @@
         <a class="social-media-link" href="#Instagram">Instagram</a>
         <a class="social-media-link" href="#Twitter">Twitter</a>
       </div>
-      <!-- <div class="sign-up"> 
-        <form action="/action.page.php">
-          <input type="email" id="email" name="email"><br><br>
-          <input type="submit" value="Sign Up">
-        </form>
-      </div> -->
-
-
     </footer>
+
   </body>
 </html> 
