Updating readme file

--- a/code/index.html
+++ b/code/index.html
@@ -55,11 +55,11 @@
       <div class="events e1">
         <img src="./se-0825-1458644-front.jpeg" alt="antony-linell" class="events-photo">
         <p>Peder Mannerfelt, Antony Linell & Ali M. Demirel present an evening of blistering 
-          audiovisual electronics in the beautiful setting of Capitol's prime movie theatre </p>
+          audiovisual electronics in the beautiful setting of Capitol's prime movie theatre. </p>
       </div>
       <div class="events e2">
         <img src="./de-0827-1458473-1779846-front.jpeg" alt="staub-festival" class="events-photo">
-        <p>Line-up will be announced soon</p>
+        <p>Line-up will be announced soon.</p>
       </div>
       <div class="events e3">
         <img src="./df2021_bannerfb_def.jpeg" alt="draaimolen-festival" class="events-photo">
@@ -67,7 +67,7 @@
       </div>
       <div class="events e4">
         <img src="./se-0828-1460090-front.jpeg" alt="tradgarden-party" class="events-photo">
-        <p>Daytime Sessions#66</p>
+        <p>Daytime Sessions#66.</p>
       </div>
     </section>
 
@@ -90,7 +90,7 @@
       </div>
       <div class="music m4">
         <img src="./XNewYork_PcQWOEQ.png" alt="giegling-logo" class="music-photo">
-        <p>Giegling releasing new album</p>
+        <p>Giegling releasing new album.</p>
       </div>
     </section>
 
