Changing font and adding hover-effect

--- a/code/index.html
+++ b/code/index.html
@@ -14,8 +14,8 @@
     <img class="logo" src="./assets/hair-brushes.png" alt="Technigo" />
     <span class="header-title">Hair in My Face News</span>
     <nav class="navigation">
-      <a href="#">Big news</a>
-      <a href="#">Small news</a>
+      <a href="#">Big News</a>
+      <a href="#">Small news</a> 
     </nav>
   </header>
 
