Made the grid 12-based, added a breakpoint and did some cleaning.

--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="./style.css"/>
 
     <!-- Font Awesome -->
@@ -58,17 +59,15 @@
           </div>
 
           <div class="hero-text">
-            <h1 class="hero-headline-1">This is a headline</h1>
-            <p class="hero-paragraph-1">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis cras sed felis eget velit aliquet sagittis id.
+            <h1 class="hero-headline-1">Quis imperdiet massa</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua. Commodo quis imperdiet massa tincidunt.
             </p>
-            <h1 class="hero-headline-2">This is another headline</h1>
-            <p class="hero-paragraph-2">
-              Nam aliquam sem et tortor consequat. Volutpat consequat mauris nunc congue. Pretium nibh ipsum consequat nisl vel.  
+            <p class="hidden-paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Purus non enim praesent facilisis. 
             </p>
-            <h1 class="hero-headline-3">This is also a headline</h1>
-            <p class="hero-paragraph-3">
-              Rhoncus dolor purus non enim praesent elementum facilisis leo. Nisi est sit amet facilisis. Elementum nibh tellus molestie.
+            <p class="hidden-paragraph-2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci phasellus egestas tellusic.
             </p>
           </div>
         </article>
@@ -76,7 +75,7 @@
 
       <!-- More news content -->
       <section class="small-news-section">
-        <article class="article-1">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1564694457547-6ea79902e0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="pride"/>
           <h2>This is a headline</h2>
           <p>
@@ -84,7 +83,7 @@
           </p>
         </article>
 
-        <article class="article-2">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="rainforest"/>
           <h2>This is a headline</h2>
           <p>
@@ -92,7 +91,7 @@
           </p>
         </article>
 
-        <article class="article-3">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="covid-19"/>
           <h2>This is a headline</h2>
           <p>
@@ -100,7 +99,7 @@
           </p>
         </article>
 
-        <article class="article-4">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="polar-bear"/>
           <h2>This is a headline</h2>
           <p>
@@ -108,7 +107,7 @@
           </p>
         </article>
 
-        <article class="article-5">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1533229394718-02d54f4a108e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="droner"/>
           <h2>This is a headline</h2>
           <p>
@@ -116,7 +115,7 @@
           </p>
         </article>
 
-        <article class="article-6">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1591189327503-5053a8aed8d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="black-lives-matter"/>
           <h2>This is a headline</h2>
           <p>
@@ -124,7 +123,7 @@
           </p>
         </article>
 
-        <article class="article-7">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1496331285476-d13f7fd07d99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2467&q=80" alt="Sierra-Leones"/>
           <h2>This is a headline</h2>
           <p>
@@ -132,7 +131,7 @@
           </p>
         </article>
 
-        <article class="article-8">
+        <article class="small-articles">
           <img class="small-news-images" src="https://images.unsplash.com/photo-1608387371413-f2566ac510e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" alt="plant-building"/>
           <h2>This is a headline</h2>
           <p>
