--- a/code/index.html
+++ b/code/index.html
@@ -10,51 +10,51 @@
 <body>
     <header>
         <img class="logo" src="./news.svg" alt="logo">
-        <!-- <h1>Nothing but News</h1> -->
         <nav class="nav">
-            <a class="nav-item" href="path/to/subpage">Main</a>
-            <a class="nav-item" href="path/to/subpage">Second</a>
-            <a class="nav-item" href="path/to/subpage">About</a>
-            <a class="nav-item" href="path/to/subpage">Submit</a>
+            <a class="nav-item" href="./index.html">Main</a>
+            <a class="nav-item" href="./index.html">Second</a>
+            <a class="nav-item" href="./index.html">About</a>
+            <a class="nav-item" href="./index.html">Submit</a>
         </nav>
     </header>
-
+<main>
 <section class="main-news">
     <div class="first-row">
-        <div class="cardbig">
-                <img src="https://picsum.photos/250" alt="random news">
-                <h3>Lorem ipsum dolor sit,deleniti!</h3>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, laboriosam.
-        </div>
+            <div class="cardbig">
+                <img class="imgbig" src="https://images.pexels.com/photos/2485430/pexels-photo-2485430.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=300&w=300" alt="random news">
+                <h3>A Vitamin a Day Keeps<br> the Doctor Away</h3>              
+            </div>
             <div class="cardbig">    
-                <img src="https://picsum.photos/250" alt="random news">
-                <h3>Lorem ipsum dolor sit,deleniti!</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, laboriosam.</p>
+                <img class="imgbig" src="https://images.pexels.com/photos/5082560/pexels-photo-5082560.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>The productivity guide</h3>
             </div>
     </div>
 </section>
 
 <section class="second-news">
     <div class="second-row">
-        <article class="card"><img src="https://picsum.photos/100" alt="random news">
-            <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
-        <article class="card"><img src="https://picsum.photos/100" alt="random news">
-            <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
-        <article class="card"><img src="https://picsum.photos/100" alt="random news">
-            <h4>Lorem ipsum dolor sit,deleniti!</h4>READ MORE</article>
-        <article class="card"><img src="https://picsum.photos/100" alt="random news">
-            <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
-            <article class="card"><img src="https://picsum.photos/100" alt="random news">
-                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
-            <article class="card"><img src="https://picsum.photos/100" alt="random news">
-                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
-            <article class="card"><img src="https://picsum.photos/100" alt="random news">
-                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
-            <article class="card"><img src="https://picsum.photos/100" alt="random news">
-                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/4887868/pexels-photo-4887868.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>Relationships: the key to longevity</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/6833947/pexels-photo-6833947.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>15 breakfast recipes you can make in 15 min</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/2097519/pexels-photo-2097519.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>The vast fungi kingdom</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/3629537/pexels-photo-3629537.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>How to make your veggies last longer</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/62326/fern-leaf-plant-leaf-fern-62326.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>50 mind-blowing nature facts</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/3233259/pexels-photo-3233259.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>8 Simple Ways to Become a Great Host</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/3099358/pexels-photo-3099358.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>Studies show that driving enhances life goals</h3>READ MORE</article>
+        <article class="card"><img class="imgsmall" src="https://images.pexels.com/photos/1580466/pexels-photo-1580466.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="random news">
+                <h3>Amazing new avocado dishes!</h3>READ MORE</article>
     </div>
   </section>
 
-<footer>Responsive made by Jakob Lindstrom</footer>    
-</body>
+            <footer>
+                <h5>Responsive made by Jakob Lindstrom</h5>
+            </footer>     
+        </main>
+    </body>
 </html>
